--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="Track buses in real-time, plan trips with AI, and travel safely across Nepal with म Yatri." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    <link rel="icon" type="image/png" href="/Untitled design.png" />
+    <link rel="icon" type="image/png" href="/favicon.ico" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Lovable" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
